--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,23 +1,18 @@
 
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #00529B;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><i class="bi bi-list ms-3"></i></a>
+      <a class="navb" href="#" style="color: white; font-size: 2rem;"><i class="bi bi-list ms-3"></i></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-li name active float-end" aria-current="page" href="#" >TodoList</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
-          </li>
+          
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="na dropdown-toggle float-end justify-content-between" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"  >
               Dropdown link
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -26,15 +21,46 @@
               <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
           </li>
+        <li class="nav-item ">
+            <a class="nav-link" href="#"><i class="bi bi-search"></i></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link " href="#" ><i class="bi bi-bell" ></i></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" style="color: white; font-size: 1rem;"><i class="bi bi-person"></i></a>
+        </li>
         </ul>
       </div>
     </div>
   </nav>
 
-<div>
-    <h1>Welcome to my angular app</h1>
-    <p>{{message}}</p>
-    
-    <button onclick="changeMessage" class="btn">Change Message</button>
-</div>
+  <!-- Sidebar and Main Content -->
+  <div class="container-fluid">
+    <div class="row">
+      <!-- Sidebar -->
+      <nav id="sidebar" class="col-md-2 col-3 d-md-block sidebar collapse">
+        <div class="position-sticky pt-3">
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <a class="nav-link" href="#" style="color: blue;">
+                <i class="bi bi-house-door color-black"></i>
+                Home
+              </a>
+            </li>
+            <!-- Add more sidebar items here -->
+            <li class="nav-item">
+              <a class="nav-link" href="#" style="color: blue;">Link 1</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" style="color: blue;">Link 2</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" style="color: blue;">Link 3</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+
 
