--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-nav{
-    background-color: #00529B;
+*{
+    margin: 0px 0px;
+    padding: 0px 0px;
+    
 }
